--- a/udemy_handsOn/javascript/index.html
+++ b/udemy_handsOn/javascript/index.html
@@ -8,5 +8,5 @@
 <body>
     <h1>Hello  Salesforce ....</h1>
 </body>
-<script src="./datatype_script.js"></script>
-</html> 
+<script src="./spreadOperator_script.js"></script>
+</html>  
