impots and exports variables and functions

--- a/udemy_handsOn/javascript/index.html
+++ b/udemy_handsOn/javascript/index.html
@@ -8,5 +8,5 @@
 <body>
     <h1>Hello  Salesforce ....</h1>
 </body>
-<script src="./promise.js"></script>
+<script type="module" src="./importexport.js"></script>
 </html>  
