--- a/udemy_handsOn/javascript/index.html
+++ b/udemy_handsOn/javascript/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hello  Salesforce ....</h1>
+    <!-- <button onclick="myFun()">Click Me </button> -->
+     <button>Clieck ME </button>
+    <script src="./eventhandling.js"></script>
 </body>
-<script type="module" src="./importexport.js"></script>
+<!-- <script type="module" src="./importexport.js"></script> -->
 </html>  
