--- a/udemy_handsOn/LWC/LWC_Learning/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/udemy_handsOn/LWC/LWC_Learning/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -10,4 +10,11 @@
         </div>
         </lightning-card>
 
+        <lightning-card title="@Track Property ">
+            <div class="slds-m-around_medium">
+            <lightning-input type="text" label="Enter your City" onkeyup={changeCity}></lightning-input>
+            <div> My city  is {address.city} </div>
+        </div>
+        </lightning-card>
+
 </template>
