--- a/udemy_handsOn/LWC/LWC_Learning/force-app/main/default/lwc/looping/looping.html
+++ b/udemy_handsOn/LWC/LWC_Learning/force-app/main/default/lwc/looping/looping.html
@@ -1,12 +1,45 @@
 <template>
     <lightning-card title="For:Each Loop">
         <div class="slds-var-m-around_medium">
-           <template for:each ={carList} for:item="car">
-           
-                <ul key={car} class="slds-has-dividers_around-space">
-                    <li class="slds-item"> {car}</li>
-                  </ul>
-        </template>
+            <ul class="slds-has-dividers_around-space">
+                <template for:each={carList} for:item="car">
+                    <li key={car} class="slds-item"> {car}</li>
+                </template>
+            </ul>
         </div>
     </lightning-card>
+
+    <lightning-card title="Iterator Loop">
+        <div class="slds-var-m-around_medium">
+            <ul class="slds-has-dividers_around-space">
+                <template iterator:ceo={ceoList}>
+
+                    <li key={ceo.value.id} class="slds-item">
+                        <template if:true={ceo.first}>
+                            <div class="slds-box slds-theme_shade">
+                                <strong>
+                                    List of Top companies and there CEO's
+                                </strong>
+                            </div>
+                        </template>
+                        <div>
+                            <Strong>{ceo.value.company} </Strong>
+                            {ceo.value.name}
+                        </div>
+
+                        <template if:true={ceo.last}>
+                            <div class="slds-box slds-theme_shade">
+                                <strong>
+                                    Thankss for reading the list
+                                </strong>
+                            </div>
+                        </template>
+                    </li>
+
+                </template>
+            </ul>
+        </div>
+    </lightning-card>
+
+
 </template>
